crates/leaf-macros/tests/ui/generic_component_is_a_hard_error.stderr
error: `Repo` is generic: a generic bean has no single concrete type to register as a const Descriptor row. Register a concrete instantiation with `register_component!(Repo<Concrete>)`.
 --> tests/ui/generic_component_is_a_hard_error.rs:7:1
  |
7 | #[component]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
